--- a/01-基础/doc/01_数据类型.md
+++ b/01-基础/doc/01_数据类型.md
@@ -3,20 +3,20 @@
 ## 1.1 基本类型
 
 |  | **类型**        | **长度** | **默认值** | **说明**                    |
-|----------|---------------|--------|---------|---------------------------|
-|  字符串    | string        |        | ""      | UTF-8 字符串                 |
-| 布尔值      | bool          | 1      | false   |                           |
-|  整型        | int, uint     | 4 或 8  | 0       | 32 或 64 位                 |
-|  整型       | int8, uint8   | 1      | 0       | -128 ~ 127, 0 ~ 255       |
-|  整型      | int16, uint16 | 2      | 0       | -32768 ~ 32767, 0 ~ 65535 |
-|  整型       | int32, uint32 | 4      | 0       | -21亿 ~ 21 亿, 0 ~ 42 亿     |
-|  整型      | int64, uint64 | 8      | 0       |                           |
-|  整型         | byte          | 1      | 0       | uint8                     |
-|  整型      | rune          | 4      | 0       | Unicode Code Point, int32 |
-| 浮点型      | float32       | 4      | 0.0     |                           |
-| 浮点型      | float64       | 8      | 0.0     |                           |
-|  浮点型     | complex64       | 8      |     |                           |
-|  浮点型     | complex128       | 16      |     |                           |
+|----------|---------------|--------|----|---------------------------|
+|  字符串    | string        |        | "" | UTF-8 字符串                 |
+| 布尔值      | bool          | 1      | false |                           |
+|  整型        | int, uint     | 4 或 8  | 0  | 32 或 64 位                 |
+|  整型       | int8, uint8   | 1      | 0  | -128 ~ 127, 0 ~ 255       |
+|  整型      | int16, uint16 | 2      | 0  | -32768 ~ 32767, 0 ~ 65535 |
+|  整型       | int32, uint32 | 4      | 0  | -21亿 ~ 21 亿, 0 ~ 42 亿     |
+|  整型      | int64, uint64 | 8      | 0  |                           |
+|  整型         | byte          | 1      | 0  | uint8                     |
+|  整型      | rune          | 4      | 0  | Unicode Code Point, int32 |
+| 浮点型      | float32       | 4      | 0  |                           |
+| 浮点型      | float64       | 8      | 0  |                           |
+|  浮点型     | complex64       | 8      |    |                           |
+|  浮点型     | complex128       | 16      |    |                           |
 
 > 所有像 int、float、bool 和 string 这些基本类型都属于值类型，使用这些类型的变量直接指向存在内存中的值：
 > 
@@ -57,4 +57,103 @@ varName, varName2, varName3, ... := value, value2, value3, ...
 常量的定义格式：
 ```go
 const varName [type] = value
+```
+
+> 函数内定义的变量称为局部变量
+> 
+> 函数外定义的变量称为全局变量
+> 
+> Go 语言程序中全局变量与局部变量名称可以相同，但是函数内的局部变量会被优先考虑
+> 
+
+## 2.1 数组
+
+### 2.1.1 声明数组
+```go
+var variable_name [SIZE] variable_type
+```
+例如：
+```go
+var arr = [3]int{}
+fmt.Println(arr) //[0 0 0]
+
+var arrStr = [3]string{}
+fmt.Println(arrStr) // [  ]
+```
+### 2.1.2 初始化数组
+```go
+var arr2 = [2]string{"A", "B"}
+fmt.Println(arr2) //[A B]
+
+// 数组长度不确定，可以使用 ... 代替数组的长度，编译器会根据元素个数自行推断数组的长度：
+var balance = [...]float32{1.01, 2.0, 3.4, 7.0, 50.0}
+fmt.Println(balance)
+
+//  将索引为 1 和 3 的元素初始化
+balance2 := [5]float32{1: 2.0, 3: 7.0}
+fmt.Println(balance2) //[0 2 0 7 0] 
+```
+
+### 2.1.3 修改数组
+```go
+var arr2 = [2]string{"A", "B"}
+fmt.Println(arr2)
+// 修改索引为1的元素值为 C
+arr2[1] = "C"
+fmt.Println(arr2)
+```
+### 2.1.3 访问数组元素
+数组元素可以通过索引（位置）来读取。格式为数组名后加中括号，中括号中为索引的值。例如：
+```go
+// 读取数组 balance 第 10 个元素的值。
+var salary float32 = balance[9]
+
+// 遍历数组
+var ins = [...]int{5, 4, 3, 2, 1}
+for i := 0; i < len(ins); i++ {
+    fmt.Println(ins[i])
+}
+```
+
+## 2.2 切片
+1. 定义切片:
+```go
+var varName []type
+```
+> 切片不需要说明长度。
+
+2. 使用 make() 函数来创建切片:
+```go
+// make()函数
+// T 是数据类型(int,string...)，length 初始长度，capacity 容量  
+// 容量设置的不能比初始长度小，会报错：invalid argument: length and capacity swapped
+make([]T, length, capacity)
+
+//使用 make() 函数来创建切片
+var slice1 []type = make([]type, len)
+
+//也可以简写为
+slice1 := make([]type, len)
+```
+例如：
+```go
+var slice1 []int = make([]int, 10, 20)
+fmt.Println(len(slice1)) //10
+fmt.Println(cap(slice1)) //20
+```
+```markdown
+初始化切片 s，是数组 arr 的引用。
+s := arr[:]
+
+将 arr 中从下标 startIndex 到 endIndex-1 下的元素创建为一个新的切片。
+s := arr[startIndex:endIndex]
+
+默认 endIndex 时将表示一直到arr的最后一个元素。
+s := arr[startIndex:]
+
+默认 startIndex 时将表示从 arr 的第一个元素开始。
+s := arr[:endIndex]
+
+通过切片 s 初始化切片 s1。
+s1 := s[startIndex:endIndex]
 ```
