--- a/01-基础/doc/01_数据类型.md
+++ b/01-基础/doc/01_数据类型.md
@@ -157,3 +157,16 @@ s := arr[:endIndex]
 通过切片 s 初始化切片 s1。
 s1 := s[startIndex:endIndex]
 ```
+
+## 2.4 Map
+
+定义 Map：
+
+```
+/* 声明变量，默认 map 是 nil */
+var map_variable map[key_data_type]value_data_type
+
+/* 使用 make 函数 */
+map_variable := make(map[key_data_type]value_data_type)
+```
+
